--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -1,13 +1,41 @@
 #jp-nav {
-  height: 60px;
+  display: flex;
+  flex-flow: row wrap;
+  margin-bottom: 20px;
 
-  span {
+  .tab {
     background: lightyellow;
     border: 1px solid;
     border-radius: 5px;
     cursor: pointer;
-    margin: 10px;
+    flex: 1;
+    height: 60px;
     padding: 10px;
-    width: 200px;
   }
 }
+
+@media all and (max-width: 900px) {
+  #jp-nav .tab {
+    flex-basis: 20%;
+  }
+}
+
+@media all and (max-width: 800px) {
+  #jp-nav .tab {
+    flex-basis: 30%;
+  }
+}
+
+@media all and (max-width: 700px) {
+  #jp-nav .tab {
+    flex-basis: 40%;
+  }
+}
+
+@media all and (max-width: 600px) {
+  #jp-nav .tab {
+    flex-basis: 100%;
+  }
+}
+
+// For CSS Grid implementation see: https://codepen.io/jpoyzner/pen/MNPzer
